# euonyme

./: .gitignore  .gitmodules  CNAME  README.md  about.html  archive.html  contact.html  contact.markdown  euonyme.cabal  index.html
css/: default.css
posts/: 2019-01-08-reversing-text-files.html  2019-01-08-reversing-text-files.md  2022-03-27-use-show-read-judiciously.html  2022-03-27-use-show-read-judiciously.md
templates/: archive.html  default.html
