cabal-version:      3.8
name:               euonyme
version:            0.1.0
build-type:         Simple


executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll ^>= 4.16
                  , pandoc
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
